--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -43,6 +43,279 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 2075259 entries, 2006-12-16 17:24:00 to 2010-11-26 21:02:00\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                 Dtype  \n",
+      "---  ------                 -----  \n",
+      " 0   Global_active_power    float64\n",
+      " 1   Global_reactive_power  float64\n",
+      " 2   Voltage                float64\n",
+      " 3   Global_intensity       float64\n",
+      " 4   Sub_metering_1         float64\n",
+      " 5   Sub_metering_2         float64\n",
+      " 6   Sub_metering_3         float64\n",
+      "dtypes: float64(7)\n",
+      "memory usage: 126.7 MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Global_active_power</th>\n",
+       "      <th>Global_reactive_power</th>\n",
+       "      <th>Voltage</th>\n",
+       "      <th>Global_intensity</th>\n",
+       "      <th>Sub_metering_1</th>\n",
+       "      <th>Sub_metering_2</th>\n",
+       "      <th>Sub_metering_3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 17:24:00</th>\n",
+       "      <td>4.216</td>\n",
+       "      <td>0.418</td>\n",
+       "      <td>234.84</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 17:25:00</th>\n",
+       "      <td>5.360</td>\n",
+       "      <td>0.436</td>\n",
+       "      <td>233.63</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 17:26:00</th>\n",
+       "      <td>5.374</td>\n",
+       "      <td>0.498</td>\n",
+       "      <td>233.29</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 17:27:00</th>\n",
+       "      <td>5.388</td>\n",
+       "      <td>0.502</td>\n",
+       "      <td>233.74</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 17:28:00</th>\n",
+       "      <td>3.666</td>\n",
+       "      <td>0.528</td>\n",
+       "      <td>235.68</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Global_active_power  Global_reactive_power  Voltage  \\\n",
+       "datetime                                                                   \n",
+       "2006-12-16 17:24:00                4.216                  0.418   234.84   \n",
+       "2006-12-16 17:25:00                5.360                  0.436   233.63   \n",
+       "2006-12-16 17:26:00                5.374                  0.498   233.29   \n",
+       "2006-12-16 17:27:00                5.388                  0.502   233.74   \n",
+       "2006-12-16 17:28:00                3.666                  0.528   235.68   \n",
+       "\n",
+       "                     Global_intensity  Sub_metering_1  Sub_metering_2  \\\n",
+       "datetime                                                                \n",
+       "2006-12-16 17:24:00              18.4             0.0             1.0   \n",
+       "2006-12-16 17:25:00              23.0             0.0             1.0   \n",
+       "2006-12-16 17:26:00              23.0             0.0             2.0   \n",
+       "2006-12-16 17:27:00              23.0             0.0             1.0   \n",
+       "2006-12-16 17:28:00              15.8             0.0             1.0   \n",
+       "\n",
+       "                     Sub_metering_3  \n",
+       "datetime                             \n",
+       "2006-12-16 17:24:00            17.0  \n",
+       "2006-12-16 17:25:00            16.0  \n",
+       "2006-12-16 17:26:00            17.0  \n",
+       "2006-12-16 17:27:00            17.0  \n",
+       "2006-12-16 17:28:00            17.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## create data directory\n",
+    "\n",
+    "os.makedirs('./data', exist_ok=True)\n",
+    "\n",
+    "## set data path\n",
+    "path= os.path.join('data', 'individual+household+electric+power+consumption.zip')\n",
+    "\n",
+    "power_consumption_data = (\n",
+    "    pd.read_csv(\n",
+    "        filepath_or_buffer=path,\n",
+    "        compression='zip',\n",
+    "        header='infer',\n",
+    "        sep=';',\n",
+    "        na_values=['?', 'nan'],\n",
+    "        low_memory=False\n",
+    "    )\n",
+    "    .assign(datetime=lambda x: pd.to_datetime(x['Date'] + ' ' + x['Time'], dayfirst=True))\n",
+    "    .set_index('datetime')\n",
+    "    .drop(columns=['Date', 'Time'])\n",
+    ")\n",
+    "\n",
+    "power_consumption_data.info()\n",
+    "power_consumption_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration\n",
+    "\n",
+    "* Check Missing Observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Global_active_power      25979\n",
+       "Global_reactive_power    25979\n",
+       "Voltage                  25979\n",
+       "Global_intensity         25979\n",
+       "Sub_metering_1           25979\n",
+       "Sub_metering_2           25979\n",
+       "Sub_metering_3           25979\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power_consumption_data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows with at least one missing value: 25979\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_missing=power_consumption_data.isnull().any(axis=1).sum()\n",
+    "print(f\"Number of rows with at least one missing value: {n_missing}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All variables have missing observations. In data analytics, there are two options for dealing with missing data:\n",
+    "\n",
+    "1. We can drop all rows with at least one missing entry.\n",
+    "2. We can impute the mssing values - so that we do not throw away valuable instances.\n",
+    "\n",
+    "Because our data is time series, dropping rows with missing entries is not feasible - it will disturb the autocorrelation between instances. There are a number of way of filling missing values for time series data:\n",
+    "\n",
+    "* Last observation carried forward.\n",
+    "* Next observation carries backward.\n",
+    "* Rolling statistics (weighted moving average, weighted moving average, exponential moving average).\n",
+    "* K-Nearest Neighbors (KNN) imputer.\n",
+    "* Interpolation\n",
+    "\n",
+    "For this work, we will use intepolation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows with at least one missing value after interpolation: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## fill missing observations with interpolated values\n",
+    "\n",
+    "no_na_df=power_consumption_data.interpolate(method='time')\n",
+    "\n",
+    "n_missing=no_na_df.isnull().any(axis=1).sum()\n",
+    "print(f\"Number of rows with at least one missing value after interpolation: {n_missing}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
