--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -224,6 +224,8 @@
    "source": [
     "## Data Exploration\n",
     "\n",
+    "### Explore Missing Observations\n",
+    "\n",
     "* Check Missing Observations"
    ]
   },
@@ -315,11 +317,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Resampling\n",
+    "\n",
+    "The aim of this project is to forecast power consumption 24 hours into the future, but our data is collected every minute. We will:\n",
+    "\n",
+    "1. Resample our data hourly.\n",
+    "2. Drop the first and last hours of data in the dataframe because they do not have up to 24 hours of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 34587 entries, 2006-12-16 18:00:00 to 2010-11-26 20:00:00\n",
+      "Freq: h\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Global_active_power    34587 non-null  float64\n",
+      " 1   Global_reactive_power  34587 non-null  float64\n",
+      " 2   Voltage                34587 non-null  float64\n",
+      " 3   Global_intensity       34587 non-null  float64\n",
+      " 4   Sub_metering_1         34587 non-null  float64\n",
+      " 5   Sub_metering_2         34587 non-null  float64\n",
+      " 6   Sub_metering_3         34587 non-null  float64\n",
+      "dtypes: float64(7)\n",
+      "memory usage: 2.1 MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Global_active_power</th>\n",
+       "      <th>Global_reactive_power</th>\n",
+       "      <th>Voltage</th>\n",
+       "      <th>Global_intensity</th>\n",
+       "      <th>Sub_metering_1</th>\n",
+       "      <th>Sub_metering_2</th>\n",
+       "      <th>Sub_metering_3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 18:00:00</th>\n",
+       "      <td>217.932</td>\n",
+       "      <td>4.802</td>\n",
+       "      <td>14074.81</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>403.0</td>\n",
+       "      <td>1012.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 19:00:00</th>\n",
+       "      <td>204.014</td>\n",
+       "      <td>5.114</td>\n",
+       "      <td>13993.95</td>\n",
+       "      <td>870.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1001.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 20:00:00</th>\n",
+       "      <td>196.114</td>\n",
+       "      <td>4.506</td>\n",
+       "      <td>14044.29</td>\n",
+       "      <td>835.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1007.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 21:00:00</th>\n",
+       "      <td>183.388</td>\n",
+       "      <td>4.600</td>\n",
+       "      <td>14229.52</td>\n",
+       "      <td>782.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1033.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-16 22:00:00</th>\n",
+       "      <td>132.008</td>\n",
+       "      <td>3.370</td>\n",
+       "      <td>14325.60</td>\n",
+       "      <td>571.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>266.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Global_active_power  Global_reactive_power   Voltage  \\\n",
+       "datetime                                                                    \n",
+       "2006-12-16 18:00:00              217.932                  4.802  14074.81   \n",
+       "2006-12-16 19:00:00              204.014                  5.114  13993.95   \n",
+       "2006-12-16 20:00:00              196.114                  4.506  14044.29   \n",
+       "2006-12-16 21:00:00              183.388                  4.600  14229.52   \n",
+       "2006-12-16 22:00:00              132.008                  3.370  14325.60   \n",
+       "\n",
+       "                     Global_intensity  Sub_metering_1  Sub_metering_2  \\\n",
+       "datetime                                                                \n",
+       "2006-12-16 18:00:00             936.0             0.0           403.0   \n",
+       "2006-12-16 19:00:00             870.2             0.0            86.0   \n",
+       "2006-12-16 20:00:00             835.0             0.0             0.0   \n",
+       "2006-12-16 21:00:00             782.8             0.0            25.0   \n",
+       "2006-12-16 22:00:00             571.4             0.0             8.0   \n",
+       "\n",
+       "                     Sub_metering_3  \n",
+       "datetime                             \n",
+       "2006-12-16 18:00:00          1012.0  \n",
+       "2006-12-16 19:00:00          1001.0  \n",
+       "2006-12-16 20:00:00          1007.0  \n",
+       "2006-12-16 21:00:00          1033.0  \n",
+       "2006-12-16 22:00:00           266.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## resample data to hourly frequency\n",
+    "\n",
+    "hourly_power_consumption=no_na_df.resample('h').sum()\n",
+    "\n",
+    "## drop first and last hour of data\n",
+    "hourly_power_consumption=hourly_power_consumption.iloc[1:-1]\n",
+    "\n",
+    "hourly_power_consumption.info()\n",
+    "hourly_power_consumption.head()"
+   ]
   }
  ],
  "metadata": {
