uploaded final data prep notebook

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -995,7 +995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The top 3 seasonal periods are 12 hours, 9223 hours, and 24 hours. Indeed we have a daily seasonal cycle, but the most dominant seasonality is 12 hours. The second dominant seasonal cycle doesn't make any sense for our analysis."
+    "The top 3 seasonal periods are 12 hours, 9223 hours, and 24 hours. Indeed, we have a daily seasonal cycle, but the most dominant seasonality is 12 hours. The second dominant seasonal cycle doesn't make sense for our analysis, and there is no weekly seasonality. Our sine and cosine transformations are indeed very beneficial. "
    ]
   },
   {
