--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from statsmodels.tsa.stattools import adfuller, kpss"
    ]
   },
   {
@@ -90,7 +92,7 @@
     "\n",
     "### Verdict\n",
     "\n",
-    "It is always better to apply both the tests, so that it can be ensured that the series is truly stationary. If the two tests contradict (as we will see now). KPSS indicates non-stationarity and ADF indicates stationarity - The series is difference stationary. Differencing is to be used to make series stationary. The differenced series is checked for stationarity."
+    "It is always better to apply both the tests, so that it can be ensured that the series is truly stationary. If the two tests contradict (as we will see now). KPSS indicates non-stationarity and ADF indicates stationarity - The series is difference stationary. Differencing is to be used to make series stationary. The differenced series is checked for stationarity. On the other hand if ADF indicates non-stationarity and KPSS indicates stationarity, the series is trend stationary. The series must be detrended (via differencing or model fitting) to make it stationary."
    ]
   },
   {
@@ -102,16 +104,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic: -14.357816480395023\n",
+      "p-value: 9.965088412100937e-27\n"
+     ]
+    }
+   ],
    "source": [
-    "target=for_sarimax[['outcome']]\n",
+    "full_train_df=pd.concat([train_df, val_df, test_df])\n",
+    "\n",
+    "target=full_train_df.Global_active_power\n",
     "\n",
     "ad_fuller_result = adfuller(target)\n",
     "\n",
     "print(f'ADF Statistic: {ad_fuller_result[0]}')\n",
     "print(f'p-value: {ad_fuller_result[1]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* KPSS test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KPSSStatistic: 1.0486039049819735\n",
+      "p-value: 0.01\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2422187/1255454391.py:1: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is smaller than the p-value returned.\n",
+      "\n",
+      "  kpss_result = kpss(target)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kpss_result = kpss(target)\n",
+    "\n",
+    "print(f'KPSSStatistic: {kpss_result[0]}')\n",
+    "print(f'p-value: {kpss_result[1]}')"
    ]
   },
   {
