added hyperparameter tuning function

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "from tqdm import tqdm\n",
     "from matplotlib import pyplot as plt\n",
+    "from typing import List, Union, Any, Optional, Dict\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "\n",
     "\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tools.sm_exceptions import InterpolationWarning # ,ConvergenceWarning\n",
+    "\n",
+    "\n",
+    "from sklearn import set_config\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "\n",
+    "set_config(\n",
+    "    display='diagram',\n",
+    "    transform_output=\"pandas\"\n",
+    ")\n",
     "\n",
     "\n",
     "warnings.simplefilter('ignore', InterpolationWarning)"
@@ -196,7 +210,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def arimax_grid_search(\n",
+    "        train_y: Union[pd.Series, list],\n",
+    "        train_X:  Union[pd.DataFrame, list], \n",
+    "        order_list: List[Any]\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Perform a grid search over ARIMAX hyperparameters on the provided training data.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    train_y : pd.Series\n",
+    "        The training data (response) for the ARIMAX model.\n",
+    "    train_X : pd.DataFrame\n",
+    "        The training data (predictors) for the ARIMAX model.\n",
+    "    order_list : List[Any]\n",
+    "        The range of 'p' and q hyperparameters to search over.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pd.DataFrame\n",
+    "        A DataFrame containing 'p', 'd', 'q' and corresponding metrics (rmse and AIC) for each combination of hyperparameters.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    # Initialize results dataframe\n",
+    "    results=[]\n",
+    "\n",
+    "    # Grid search for p, q values\n",
+    "    for order in tqdm(order_list):\n",
+    "        try:\n",
+    "            model = SARIMAX(\n",
+    "                endog=train_y, \n",
+    "                exog=train_X,\n",
+    "                order=(order[0], 1, order[1]),\n",
+    "                enforce_stationarity=False,\n",
+    "                enforce_invertibility=False,\n",
+    "                simple_differencing=False\n",
+    "            )  # d is set to 0 because the series is stationary\n",
+    "            model_fit = model.fit(disp=False)\n",
+    "            #valid_pred = model_fit.predict(start=valid_y.index[0], end=valid_y.index[-1], exog=valid_X)\n",
+    "\n",
+    "        except:\n",
+    "            continue\n",
+    "        \n",
+    "        aic = model_fit.aic    \n",
+    "        rmse = np.sqrt(mean_squared_error(train_y, model_fit.fittedvalues))\n",
+    "        results.append({\n",
+    "            'order(p, 1, q)': order,\n",
+    "            'AIC': aic, # lower is better (Akaiki Information Criterion)\n",
+    "            'rmse': rmse\n",
+    "        })\n",
+    "\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "\n",
+    "    return results_df"
+   ]
   }
  ],
  "metadata": {
