--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "from itertools import product\n",
     "from matplotlib import pyplot as plt\n",
     "from typing import List, Union, Any, Optional, Dict\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
@@ -244,6 +245,7 @@
     "                endog=train_y, \n",
     "                exog=train_X,\n",
     "                order=(order[0], 1, order[1]),\n",
+    "                seasonal_order=(order[2], 1, order[3], s),\n",
     "                enforce_stationarity=False,\n",
     "                enforce_invertibility=False,\n",
     "                simple_differencing=False\n",
@@ -265,6 +267,21 @@
     "    results_df = pd.DataFrame(results)\n",
     "\n",
     "    return results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = range(1, 5, 1)\n",
+    "q = range(1, 5, 1)\n",
+    "P = range(1, 5, 1)\n",
+    "Q = range(1, 5, 1)\n",
+    "\n",
+    "parameters = product(p, q, P, Q)\n",
+    "parameters_list = list(parameters)"
    ]
   }
  ],
