updated the SARIMA code to the latest tqdm

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "from statsmodels.tools.sm_exceptions import InterpolationWarning # ,ConvergenceWarning\n",
+    "from statsmodels.tools.sm_exceptions import InterpolationWarning,ConvergenceWarning\n",
     "\n",
     "\n",
     "from sklearn import set_config\n",
@@ -32,7 +32,8 @@
     ")\n",
     "\n",
     "\n",
-    "warnings.simplefilter('ignore', InterpolationWarning)"
+    "warnings.simplefilter('ignore', InterpolationWarning)\n",
+    "warnings.simplefilter('ignore', ConvergenceWarning)"
    ]
   },
   {
@@ -51,23 +52,16 @@
    "source": [
     "# load data\n",
     "train_df = pd.read_parquet('./data/train.parquet')\n",
-    "train_df.index = pd.DatetimeIndex(train_df.index).to_period('H')\n",
+    "train_df.index = pd.DatetimeIndex(train_df.index).to_period('h')\n",
     "\n",
     "test_df = pd.read_parquet('./data/test.parquet')\n",
-    "test_df.index = pd.DatetimeIndex(test_df.index).to_period('H')\n",
+    "test_df.index = pd.DatetimeIndex(test_df.index).to_period('h')\n",
     "\n",
     "val_df = pd.read_parquet('./data/val.parquet')\n",
-    "val_df.index = pd.DatetimeIndex(val_df.index).to_period('H')\n",
+    "val_df.index = pd.DatetimeIndex(val_df.index).to_period('h')\n",
     "\n",
     "print(train_df.shape, val_df.shape, test_df.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -225,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,102 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sarimax_randomized_grid_search(\n",
-    "        train_y: Union[pd.Series, list],\n",
-    "        train_X:  Union[pd.DataFrame, list],\n",
-    "        valid_y: Union[pd.Series, list],\n",
-    "        valid_X:  Union[pd.DataFrame, list], \n",
-    "        order_list: List[Any],\n",
-    "        n_iter: int = 25\n",
-    ") -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Perform a grid search over ARIMAX hyperparameters on the provided training data.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    train_y : pd.Series\n",
-    "        The training data (response) for the ARIMAX model.\n",
-    "    train_X : pd.DataFrame\n",
-    "        The training data (predictors) for the ARIMAX model.\n",
-    "    order_list : List[Any]\n",
-    "        The range of 'p' and q hyperparameters to search over.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    pd.DataFrame\n",
-    "        A DataFrame containing 'p', 'd', 'q' and corresponding metrics (rmse and AIC) for each combination of hyperparameters.\n",
-    "    \n",
-    "    \"\"\"\n",
-    "\n",
-    "    random.seed(42)\n",
-    "    random.shuffle(order_list)\n",
-    "    sampled_order_list = random.sample(order_list, min(len(order_list), n_iter))\n",
-    "\n",
-    "    # Initialize results dataframe\n",
-    "    results=[]\n",
-    "\n",
-    "    # Grid search for p, q values\n",
-    "    for order in tqdm(sampled_order_list):\n",
-    "        try:\n",
-    "            model = SARIMAX(\n",
-    "                endog=train_y, \n",
-    "                exog=train_X,\n",
-    "                order=(order[0], 0, order[1]),\n",
-    "                seasonal_order=(order[2], 0, order[3], 12),\n",
-    "                enforce_stationarity=False,\n",
-    "                enforce_invertibility=False,\n",
-    "                simple_differencing=False,\n",
-    "                freq='h'\n",
-    "            )  # d and D are set to 0 because the series is stationary\n",
-    "            model_fit = model.fit(disp=False)\n",
-    "            valid_pred = model_fit.predict(start=valid_y.index[0], end=valid_y.index[-1], exog=valid_X)\n",
-    "\n",
-    "        except:\n",
-    "            continue\n",
-    "        \n",
-    "        aic = model_fit.aic    \n",
-    "        rmse = rmse(y_true=valid_y, y_pred=valid_pred)\n",
-    "        results.append({\n",
-    "            'order(p, 0, q)(P, 0, Q)_12': order,\n",
-    "            'AIC': aic, # lower is better (Akaiki Information Criterion)\n",
-    "            'rmse': rmse\n",
-    "        })\n",
-    "\n",
-    "    results_df = pd.DataFrame(results)\n",
-    "\n",
-    "    return results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/25 [00:00<?, ?it/s]/home/habeebbabatunde/Time Series/.venv/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency h will be used.\n",
-      "  self._init_dates(dates, freq)\n",
-      "  4%|▍         | 1/25 [00:45<18:18, 45.77s/it]/home/habeebbabatunde/Time Series/.venv/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency h will be used.\n",
-      "  self._init_dates(dates, freq)\n",
-      "  4%|▍         | 1/25 [02:24<57:55, 144.81s/it]\n"
+      "  0%|          | 0/25 [00:00<?, ?it/s]"
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'rmse' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m val_exo, val_endo\u001b[38;5;241m=\u001b[39mval_df\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGlobal_active_power\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), val_df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGlobal_active_power\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m     11\u001b[0m test_exo, test_endo\u001b[38;5;241m=\u001b[39mtest_df\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGlobal_active_power\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), test_df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGlobal_active_power\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m---> 13\u001b[0m sarimax_results \u001b[38;5;241m=\u001b[39m \u001b[43msarimax_randomized_grid_search\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_endo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_X\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_exo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m    \u001b[49m\u001b[43mvalid_y\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_endo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[43m    \u001b[49m\u001b[43mvalid_X\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_exo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[43m    \u001b[49m\u001b[43morder_list\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mparameters_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_iter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m25\u001b[39;49m\n\u001b[1;32m     20\u001b[0m \u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[25], line 55\u001b[0m, in \u001b[0;36msarimax_randomized_grid_search\u001b[0;34m(train_y, train_X, valid_y, valid_X, order_list, n_iter)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     54\u001b[0m     aic \u001b[38;5;241m=\u001b[39m model_fit\u001b[38;5;241m.\u001b[39maic    \n\u001b[0;32m---> 55\u001b[0m     rmse \u001b[38;5;241m=\u001b[39m \u001b[43mrmse\u001b[49m(y_true\u001b[38;5;241m=\u001b[39mvalid_y, y_pred\u001b[38;5;241m=\u001b[39mvalid_pred)\n\u001b[1;32m     56\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     57\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morder(p, 0, q)(P, 0, Q)_12\u001b[39m\u001b[38;5;124m'\u001b[39m: order,\n\u001b[1;32m     58\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAIC\u001b[39m\u001b[38;5;124m'\u001b[39m: aic, \u001b[38;5;66;03m# lower is better (Akaiki Information Criterion)\u001b[39;00m\n\u001b[1;32m     59\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrmse\u001b[39m\u001b[38;5;124m'\u001b[39m: rmse\n\u001b[1;32m     60\u001b[0m     })\n\u001b[1;32m     62\u001b[0m results_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(results)\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'rmse' referenced before assignment"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  8%|▊         | 2/25 [07:55<1:25:27, 222.95s/it]/home/habeebbabatunde/Time Series/.venv/lib/python3.10/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      " 12%|█▏        | 3/25 [20:26<2:50:12, 464.22s/it]/home/habeebbabatunde/Time Series/.venv/lib/python3.10/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      " 16%|█▌        | 4/25 [23:37<2:04:39, 356.17s/it]"
      ]
     }
    ],
