new hyperparameter optmization

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import random\n",
     "import warnings\n",
     "import numpy as np\n",
@@ -31,14 +32,13 @@
     "    transform_output=\"pandas\"\n",
     ")\n",
     "\n",
-    "\n",
     "warnings.simplefilter('ignore', InterpolationWarning)\n",
     "warnings.simplefilter('ignore', ConvergenceWarning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,22 +293,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1466d837d98f47d5bcbd12a3e875a55b",
+       "model_id": "8d7a5b86339a425b943f1d95fa005b03",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
+       "  0%|          | 0/15 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error with order (4, 2, 3, 1): Input contains NaN.\n"
+     ]
     }
    ],
    "source": [
@@ -330,7 +337,7 @@
     "    valid_y=val_endo,\n",
     "    valid_X=val_exo,\n",
     "    order_list=parameters_list,\n",
-    "    n_iter=3\n",
+    "    n_iter=15\n",
     ")"
    ]
   },
@@ -339,7 +346,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## create results directory\n",
+    "\n",
+    "os.makedirs('./results', exist_ok=True)\n",
+    "\n",
+    "sarimax_results.sort_values('AIC').to_csv('./Data/sarimax_grid_search_results.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order(p, 0, q)(P, 0, Q, 12)</th>\n",
+       "      <th>AIC</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(1, 1, 4, 4)</td>\n",
+       "      <td>72044.458637</td>\n",
+       "      <td>1.725102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(2, 1, 2, 4)</td>\n",
+       "      <td>72122.026833</td>\n",
+       "      <td>1.726150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(1, 2, 1, 1)</td>\n",
+       "      <td>72882.777209</td>\n",
+       "      <td>1.726783</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  order(p, 0, q)(P, 0, Q, 12)           AIC      RMSE\n",
+       "9                (1, 1, 4, 4)  72044.458637  1.725102\n",
+       "5                (2, 1, 2, 4)  72122.026833  1.726150\n",
+       "8                (1, 2, 1, 1)  72882.777209  1.726783"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sarimax_results.sort_values('RMSE').head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Best model based on RMSE\n",
+    "\n",
+    "$$SARIMA(1,0,1)(4,0,4)_{12}$$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## create results directory\n",
+    "\n",
+    "os.makedirs('./results', exist_ok=True)\n",
+    "\n",
+    "sarimax_results.sort_values('AIC').to_csv('./results/sarimax_grid_search_results.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
