--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -369,7 +369,9 @@
     "        train_y: pd.Series,\n",
     "        train_X: pd.DataFrame,\n",
     "        order_list: List[Any],\n",
-    "        n_iter: int = 25\n",
+    "        n_iter: int = 25,\n",
+    "        d: int = 0,\n",
+    "        D: int = 0\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Perform a grid search over ARIMAX hyperparameters on the provided training data.\n",
@@ -384,6 +386,10 @@
     "        The range of 'p', 'd', 'q', and seasonal parameters to search over.\n",
     "    n_iter : int\n",
     "        The number of parameter combinations to try.\n",
+    "    d : int\n",
+    "        The number of non-seasonal differences to take.\n",
+    "    D : int\n",
+    "        The number of seasonal differences to take.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -401,12 +407,9 @@
     "            model = SARIMAX(\n",
     "                endog=train_y, \n",
     "                exog=train_X,\n",
-    "                order=(order[0], 1, order[1]),\n",
-    "                seasonal_order=(order[2], 0, order[3], 24),\n",
-    "                trend='c',\n",
-    "                # enforce_stationarity=False,\n",
-    "                # enforce_invertibility=False,\n",
-    "                # simple_differencing=False\n",
+    "                order=(order[0], d, order[1]),\n",
+    "                seasonal_order=(order[2], D, order[3], 24),\n",
+    "                trend='c'\n",
     "            )\n",
     "            model_fit = model.fit(disp=False)\n",
     "\n",
@@ -462,7 +465,9 @@
     "    train_y=train_endo,\n",
     "    train_X=train_exo,\n",
     "    order_list=parameters_list,\n",
-    "    n_iter=10\n",
+    "    n_iter=10,\n",
+    "    d=1,\n",
+    "    D=0\n",
     ")"
    ]
   },
@@ -580,45 +585,9 @@
      "output_type": "stream",
      "text": [
       "=========================================\n",
-      "Best order: SARIMA(2, 1, 2)(2, 0, 2)_[24]\n",
+      "Best order: SARIMA(2, 1, 1)(2, 0, 0)_[24]\n",
       "=========================================\n",
-      "\n",
-      "                                     SARIMAX Results                                      \n",
-      "==========================================================================================\n",
-      "Dep. Variable:                Global_active_power   No. Observations:                27669\n",
-      "Model:             SARIMAX(2, 1, 2)x(2, 0, 2, 24)   Log Likelihood              -39507.656\n",
-      "Date:                            Wed, 28 Feb 2024   AIC                          79045.311\n",
-      "Time:                                    11:51:54   BIC                          79168.704\n",
-      "Sample:                                12-16-2006   HQIC                         79085.060\n",
-      "                                     - 02-11-2010                                         \n",
-      "Covariance Type:                              opg                                         \n",
-      "=========================================================================================\n",
-      "                            coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "-----------------------------------------------------------------------------------------\n",
-      "Global_reactive_power    -0.1596      0.002   -106.318      0.000      -0.163      -0.157\n",
-      "Voltage                   0.0041   6.43e-05     63.477      0.000       0.004       0.004\n",
-      "Global_intensity          0.2390   5.99e-05   3987.600      0.000       0.239       0.239\n",
-      "Sub_metering_1           -0.0009   2.43e-05    -37.642      0.000      -0.001      -0.001\n",
-      "Sub_metering_2           -0.0009   2.07e-05    -43.563      0.000      -0.001      -0.001\n",
-      "Sub_metering_3            0.0018    2.2e-05     81.674      0.000       0.002       0.002\n",
-      "ar.L1                    -0.5343      0.032    -16.661      0.000      -0.597      -0.471\n",
-      "ar.L2                     0.3566      0.015     23.882      0.000       0.327       0.386\n",
-      "ma.L1                     0.0124      0.032      0.394      0.694      -0.049       0.074\n",
-      "ma.L2                    -0.8533      0.029    -29.038      0.000      -0.911      -0.796\n",
-      "ar.S.L24                  0.0902      0.232      0.390      0.697      -0.364       0.544\n",
-      "ar.S.L48                  0.0451      0.080      0.567      0.571      -0.111       0.201\n",
-      "ma.S.L24                 -0.0197      0.232     -0.085      0.932      -0.474       0.434\n",
-      "ma.S.L48                 -0.0279      0.070     -0.396      0.692      -0.166       0.110\n",
-      "sigma2                    1.0387      0.004    272.990      0.000       1.031       1.046\n",
-      "===================================================================================\n",
-      "Ljung-Box (L1) (Q):                  33.45   Jarque-Bera (JB):            145087.25\n",
-      "Prob(Q):                              0.00   Prob(JB):                         0.00\n",
-      "Heteroskedasticity (H):               0.88   Skew:                            -1.00\n",
-      "Prob(H) (two-sided):                  0.00   Kurtosis:                        14.05\n",
-      "===================================================================================\n",
-      "\n",
-      "Warnings:\n",
-      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+      "\n"
      ]
     }
    ],
@@ -634,9 +603,8 @@
     "    order=(best_order[0], 1, best_order[1]),\n",
     "    seasonal_order=(best_order[2], 0, best_order[3], 24),\n",
     "    trend='c',\n",
-    "    # enforce_stationarity=False,\n",
-    "    # enforce_invertibility=False,\n",
-    "    # simple_differencing=False\n",
+    "    d=1,\n",
+    "    D=0\n",
     ").fit(disp=False)\n",
     "\n",
     "print(final_model.summary())"
