added random state

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -389,7 +389,8 @@
     "        n_iter: int = 25,\n",
     "        d: int = 0,\n",
     "        D: int = 0,\n",
-    "        s: int = 24  # Seasonal period, defaulting to 24\n",
+    "        s: int = 24,  # Seasonal period, defaulting to 24\n",
+    "        random_state: int = 42 # For reproducibility\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Perform a randomized grid search over SARIMAX hyperparameters, including both non-seasonal and seasonal differencing terms,\n",
@@ -418,7 +419,7 @@
     "        A DataFrame containing the parameter combination ('p', 'd', 'q', 'P', 'D', 'Q', 's') and the corresponding AIC value.\n",
     "    \"\"\"\n",
     "\n",
-    "    random.seed(42)  # Ensure reproducibility in parameter selection\n",
+    "    random.seed(random_state)  \n",
     "    sampled_order_list = random.sample(order_list, min(len(order_list), n_iter))  # Sample parameter combinations\n",
     "\n",
     "    results = []\n",
