added flexibility for random state

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -378,10 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "from typing import List, Tuple, Any\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "def sarimax_randomized_grid_search(\n",
     "        train_y: pd.Series,\n",
     "        train_X: pd.DataFrame,\n",
@@ -390,11 +396,11 @@
     "        d: int = 0,\n",
     "        D: int = 0,\n",
     "        s: int = 24,  # Seasonal period, defaulting to 24\n",
-    "        random_state: int = 42 # For reproducibility\n",
+    "        random_state: int = None  # Optional random state for reproducibility\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Perform a randomized grid search over SARIMAX hyperparameters, including both non-seasonal and seasonal differencing terms,\n",
-    "    and the seasonal period, on the provided training data.\n",
+    "    the seasonal period, and an optional random state for reproducibility, on the provided training data.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -412,6 +418,8 @@
     "        The degree of seasonal differencing.\n",
     "    s : int\n",
     "        The seasonal period of the model, with a default of 24.\n",
+    "    random_state : int, optional\n",
+    "        The seed for the random number generator. If None, the random state is not fixed.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -419,7 +427,9 @@
     "        A DataFrame containing the parameter combination ('p', 'd', 'q', 'P', 'D', 'Q', 's') and the corresponding AIC value.\n",
     "    \"\"\"\n",
     "\n",
-    "    random.seed(random_state)  \n",
+    "    if random_state is not None:\n",
+    "        random.seed(random_state)  # Set random state for reproducibility if specified\n",
+    "    \n",
     "    sampled_order_list = random.sample(order_list, min(len(order_list), n_iter))  # Sample parameter combinations\n",
     "\n",
     "    results = []\n",
@@ -430,10 +440,10 @@
     "                endog=train_y, \n",
     "                exog=train_X,\n",
     "                order=(order[0], d, order[1]),\n",
-    "                seasonal_order=(order[2], D, order[3], s),  # defaults to a seasonal period of 24\n",
+    "                seasonal_order=(order[2], D, order[3], s),\n",
     "                trend='c'\n",
     "            )\n",
-    "            model_fit = model.fit(disp=0)  # disp=0 to minimize output during fitting\n",
+    "            model_fit = model.fit(disp=0)\n",
     "\n",
     "            aic = model_fit.aic\n",
     "            results.append({\n",
@@ -445,9 +455,9 @@
     "            print(f\"Error with order {order}: {e}\")\n",
     "            continue\n",
     "\n",
-    "    results_df = pd.DataFrame(results).sort_values(by=\"AIC\", ascending=True)  # Sort results by AIC for easy evaluation\n",
+    "    results_df = pd.DataFrame(results).sort_values(by=\"AIC\", ascending=True)\n",
     "\n",
-    "    return results_df"
+    "    return results_df\n"
    ]
   },
   {
